Bug 1848542 - Add telemetry for residual cache folder removal or failure r=necko-reviewers,kershaw

Differential Revision: https://phabricator.services.mozilla.com/D194076